--- a/src/main/webapp/pages/_editLetters/_editLetters.html
+++ b/src/main/webapp/pages/_editLetters/_editLetters.html
@@ -50,7 +50,7 @@
             <wm-layoutgrid columns="2" name="layoutgrid26-a">
                 <wm-gridrow name="gridrow99_1" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="3" name="gridcolumn146">
-                        <wm-label name="label2_1" caption="Letter Name" fontweight="bold" class="col-md-12 form-control-static"></wm-label>
+                        <wm-label name="label2_1" caption="Letter Name" fontweight="bold" class="col-md-12 form-control-static" required="true"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="9" name="gridcolumn9">
                         <input class="form-control app-textbox" name="letterTitle" type="text" ng-model="Variables.svGetLetterTemplate.dataSet.title">
