--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -502,19 +502,29 @@
                                     <wm-layoutgrid name="layoutgrid21">
                                         <wm-gridrow name="gridrow68">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn141">
-                                                <wm-label padding="unset 0.5em" name="label33" caption="Below you will find a complete history of all form status updates that have been performed."></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label33" caption="Below you will find a complete history of all updates that have occurred to this form. This includes form status updates that have been performed by a municipality employee in addition to other events, such as the addition of a fee."></wm-label>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow116">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn214">
+                                                <wm-label padding="unset 0.5em" name="label141_1" caption="Current Form Status:"></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label142" caption="bind:Variables.stvCurrentStatus.dataSet.status" fontweight="bold"></wm-label>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn215">
+                                                <wm-label padding="unset 0.5em" name="label139_2" caption="Current Process Owner Group:" accessroles="MunicipalityEmployee,CXAdmin,MunicipalityAdmin"></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label140_1" caption="bind:Variables.stvCurrentStatus.dataSet.municipalityGroupsByProcessOwners.groupName" fontweight="bold" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee"></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow69">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn143">
                                                 <wm-grid title="" dataset="bind:Variables.FormHistoryData.dataSet" navigation="Classic" name="grid3" filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
-                                                    <wm-grid-column binding="createdTime" caption="Date Updated" type="timestamp" width="20%" generator="assigned" readonly="true" edit-widget-type="timestamp" show="true" filterwidget="text">{{row.getProperty('createdTime') | toLocalDateString}}</wm-grid-column>
-                                                    <wm-grid-column binding="formStatusesByOldStatusId.status" caption="Previous Status" type="string" width="10%" generator="assigned"
+                                                    <wm-grid-column binding="createdTime" caption="Date Updated" type="timestamp" width="16%" generator="assigned" readonly="true" edit-widget-type="timestamp" show="true" filterwidget="text">{{row.getProperty('createdTime') | toLocalDateString}}</wm-grid-column>
+                                                    <wm-grid-column binding="formStatusesByOldStatusId.status" caption="Previous Status" type="string" width="12%" generator="assigned"
                                                     readonly="true" edit-widget-type="text" show="true" related-entity-name="FormStatuses"></wm-grid-column>
-                                                    <wm-grid-column binding="formStatusesByNewStatusId.status" caption="New Status" type="string" width="10%" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="FormStatuses"></wm-grid-column>
-                                                    <wm-grid-column binding="users.fullName" caption="Performed By" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
-                                                    <wm-grid-column binding="users.email" caption="Email Address" type="string" width="20%" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
-                                                    <wm-grid-column binding="comments" caption="Notes" type="string" width="20%" generator="assigned" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
+                                                    <wm-grid-column binding="formStatusesByNewStatusId.status" caption="New Status" type="string" width="12%" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="FormStatuses"></wm-grid-column>
+                                                    <wm-grid-column binding="users.fullName" caption="Performed By" type="string" width="20%" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text" show="true"
+                                                    related-entity-name="Users"></wm-grid-column>
+                                                    <wm-grid-column binding="comments" caption="Description" type="string" width="40%" generator="assigned" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                                 </wm-grid>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
