--- a/src/main/webapp/pages/ManageForms/ManageForms.html
+++ b/src/main/webapp/pages/ManageForms/ManageForms.html
@@ -209,7 +209,7 @@
     <wm-view class="dialog-view" name="view4">
         <wm-dialog dialogtype="design-dialog" modal="true" title="Copy Form Design" iconclass="wi wi-content-copy" name="dialogCopyFormDesign">
             <wm-dialogactions name="dialogactions3">
-                <wm-button class="btn-primary" caption="Create" type="button" margin="unset 0.5em" name="button5" iconclass="wi wi-plus" on-click="Variables.svCopyFormDesign.invoke();Widgets.dialogCopyFormDesign.close()"></wm-button>
+                <wm-button class="btn-primary" caption="Create" type="button" margin="unset 0.5em" name="button5" iconclass="wi wi-plus" on-click="Variables.svCopyFormDesign.invoke();Widgets.dialogCopyFormDesign.close()" disabled="bind:!Widgets.textDesignCopyName.datavalue"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button4" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
             <wm-layoutgrid name="layoutgrid9" columns="1">
@@ -222,9 +222,9 @@
                 <wm-gridrow name="gridrow19">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn24">
                         <wm-composite name="composite2">
-                            <wm-label class="col-md-3 form-control-static" name="label5" caption="Form Name" fontunit="px" fontweight="bold"></wm-label>
+                            <wm-label class="col-md-3 form-control-static" name="label5" caption="Form Name" fontunit="px" fontweight="bold" required="true"></wm-label>
                             <wm-container class="col-md-9" name="container2">
-                                <wm-text name="textDesignCopyName" datavalue="bind:'Copy of ' + Widgets.gridFormTypes.selecteditem.formType"></wm-text>
+                                <wm-text name="textDesignCopyName" datavalue="bind:'Copy of ' + Widgets.gridFormTypes.selecteditem.formType" required="true"></wm-text>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
