--- a/src/main/webapp/pages/UserClosedForms/UserClosedForms.html
+++ b/src/main/webapp/pages/UserClosedForms/UserClosedForms.html
@@ -25,7 +25,7 @@
                             <wm-layoutgrid name="layoutgrid2">
                                 <wm-gridrow name="gridrow6">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn8_1" padding="unset unset 1em unset">
-                                        <wm-label padding="unset 0.5em unset 0.2em" name="label2" caption="Forms that you have submitted that are considered &quot;Closed&quot; are displayed here. Form processing is complete for these submissions."></wm-label>
+                                        <wm-label padding="unset 0.5em unset 0.2em" name="label2" caption="Forms that you have submitted, and forms that other users have shared with you, are displayed here when they are considered &quot;Closed&quot;. Form processing is complete for these submissions."></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow3">
