--- a/src/main/webapp/pages/UserOpenForms/UserOpenForms.html
+++ b/src/main/webapp/pages/UserOpenForms/UserOpenForms.html
@@ -27,7 +27,7 @@
                                     <wm-layoutgrid name="layoutgrid2">
                                         <wm-gridrow name="gridrow8">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn11" padding="unset unset 1em unset">
-                                                <wm-label padding="unset 0.5em unset 0.2em" name="label4" caption="Forms that you have submitted are displayed here. &quot;Open&quot; forms are still being processed by the municipality and may require additional attention and interaction."></wm-label>
+                                                <wm-label padding="unset 0.5em unset 0.2em" name="label4" caption="Forms that you have submitted, and submitted forms that have been shared with you, are displayed here. &quot;Open&quot; forms are still being processed by the municipality and may require additional attention and interaction."></wm-label>
                                                 <wm-label padding="unset 0.5em unset 0.2em" name="label5" caption="Please use the &quot;Messages&quot; feature on the form itself if you have any questions for the municipality regarding your submission."></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
